--- a/build.gradle
+++ b/build.gradle
@@ -1,14 +1,4 @@
-buildscript {
-    repositories {
-        mavenCentral()
-    }
-    dependencies {
-        classpath("org.springframework.boot:spring-boot-gradle-plugin:1.4.0.RELEASE")
-    }
-}
-
 apply plugin: 'java'
-apply plugin: 'spring-boot'
 apply plugin: 'idea'
 
 repositories {
@@ -17,18 +7,27 @@ repositories {
 
 dependencies {
     compile 'org.slf4j:slf4j-api:1.7.21'
-
-    testCompile 'junit:junit:4.12'
-    
-    compile("org.springframework.boot:spring-boot-starter-web") {
-        exclude module: "spring-boot-starter-tomcat"
-    }
-    compile("org.springframework.boot:spring-boot-starter-jetty")
-    compile("org.springframework.boot:spring-boot-starter-security")
-    compile("org.springframework.security.oauth:spring-security-oauth2")
-
-    compile("org.springframework.boot:spring-boot-starter-data-rest")
-	
-	compile group: 'commons-codec', name: 'commons-codec', version: '1.2'
+    compile group: 'org.springframework.boot', name: 'spring-boot-starter-web', version: '1.4.1.RELEASE'
+    compile group: 'commons-codec', name: 'commons-codec', version: '1.2'
     compile group: 'org.apache.commons', name: 'commons-lang3', version: '3.0'
 }
+
+version = '1.0'
+jar {
+    baseName = 'sarlacc-java-client'
+    from {
+        (configurations.runtime).collect {
+            it.isDirectory() ? it : zipTree(it)
+        }
+    }
+}
+
+uploadArchives {
+    repositories {
+        flatDir {
+            dirs '../local-repo/sarlacc-java-client'
+        }
+    }
+}
+
+
